--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/public/assets/coffee-cup.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coffee Shope</title>
+    <title>Bean & Dream</title>
   </head>
   <body>
     <div id="root"></div>
